--- a/jsconfig.json
+++ b/jsconfig.json
@@ -13,6 +13,8 @@
     "module": "esnext",
     "target": "es2020",
     "allowJs": true, 
+    "moduleResolution": "node",
+    "types": ["jest", "node"]
   },
   "include": ["src"]
 }
