--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,7 +14,7 @@
     "target": "es2020",
     "allowJs": true, 
     "moduleResolution": "node",
-    "types": ["jest", "node"]
+    "types": ["jest", "node", "cypress"]
   },
-  "include": ["src"]
+  "include": ["src", "cypress/**/*.js"]
 }
