--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "serve": "serve -s dist",
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,json,css,scss,md}\"",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
-    "e2e": "cypress run"
+    "e2e": "cypress run",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -33,7 +35,15 @@
   "devDependencies": {
     "@babel/preset-env": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
+    "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.26.0",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/experimental-addon-test": "^8.6.12",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
+    "@storybook/test": "^8.6.12",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -41,6 +51,8 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser": "^3.1.3",
+    "@vitest/coverage-v8": "^3.1.3",
     "babel-jest": "^29.7.0",
     "cypress": "^14.3.3",
     "eslint": "^9.0.0",
@@ -52,10 +64,20 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-storybook": "^0.12.0",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "playwright": "^1.52.0",
     "prettier": "^3.5.3",
-    "vite": "^6.2.0"
+    "prop-types": "^15.8.1",
+    "storybook": "^8.6.12",
+    "vite": "^6.2.0",
+    "vitest": "^3.1.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
