--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
     "e2e": "cypress run",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "ci:test": "node --experimental-vm-modules node_modules/jest/bin/jest.js && start-server-and-test dev http-get://0.0.0.0:5173 e2e"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -71,6 +72,7 @@
     "playwright": "^1.52.0",
     "prettier": "^3.5.3",
     "prop-types": "^15.8.1",
+    "start-server-and-test": "^2.0.11",
     "storybook": "^8.6.12",
     "vite": "^6.2.0",
     "vitest": "^3.1.3"
